Fix fonts on Firefox, Cascadea quirk workaround

--- a/BetterWoWForums.user.css
+++ b/BetterWoWForums.user.css
@@ -33,12 +33,10 @@
             }
         }
 
-        * {
-            font-family: system-ui !important;
-        }
+        * { font-family: system-ui, -apple-system !important; }
 
         a.fancy-title {
-            font-family: system-ui !important;
+            font-family: system-ui, -apple-system !important;
         }
 
         .text-base,
